# cyslf

./: .gitignore  .pre-commit-config.yaml  README.md  dev.ipynb  example.ipynb  fall-2022-test.ipynb  pyproject.toml  run.py  setup.cfg
cyslf/: constraints.py  convert_addresses.py  cyslf.py  make-teams.py  make_teams.py  models.py  optimize.py  prepare-student-data.py  prepare_player_data.py  prepare_player_data_new.py  scorers.py  utils.py  validation.py
cyslf/scorers/: __init__.py  base.py  core.py
cyslf/tests/: test_models.py
