[tool.poetry]
name = "cyslf"
version = "0.1.0"
description = "CYS League Formation"
authors = ["Evan Tey <evantey14@gmail.com>"]
license = "MIT"
exclude = ["cyslf/tests"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.4.3"
geopy = "^2.2.0"
tqdm = "^4.64.0"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
jupyter = "^1.0.0"
tox = "^3.25.1"
pytest = "^7.1.2"

[tool.poetry.scripts]
prepare-player-data = "cyslf.prepare_player_data:main"
make-teams = "cyslf.make_teams:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox-ini = """
[tox]
envlist = py37,py38,py39,py310
isolated_build = True

[testenv]
whitelist_externals = poetry
commands =
    pytest

[tox:.package]
# note tox will use the same python version as under what tox is installed to package
# so unless this is python 3 you can require a given python version for the packaging
# environment via the basepython key
basepython = python3
"""
