[tool.poetry]
name = "cyslf"
version = "0.2.5"
description = "CYS League Formation"
authors = ["Evan Tey <evantey14@gmail.com>"]
license = "MIT"
exclude = ["cyslf/tests"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
geopy = "^2.2.0"
tqdm = "^4.64.0"
numpy = "^1.21.3"
thefuzz = "^0.19.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
jupyter = "^1.0.0"
tox = "^3.25.1"
pytest = "^7.1.2"
line-profiler = "^3.5.1"

[tool.poetry.scripts]
prepare-player-data = "cyslf.prepare_player_data:main"
make-teams = "cyslf.make_teams:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310}
isolated_build = True

[testenv]
whitelist_externals = poetry
commands =
    poetry install
    poetry run pytest
"""
